--- a/SymLink Tools/SymLink Tools.csproj
+++ b/SymLink Tools/SymLink Tools.csproj
@@ -56,7 +56,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="SymLink.cs" />
+    <Compile Include="SymLinkBuilder.cs" />
     <Compile Include="Tools\StorageHelper.cs" />
     <Compile Include="Windows\DirectoryListing.xaml.cs">
       <DependentUpon>DirectoryListing.xaml</DependentUpon>
