--- a/SymLink Tools/SymLink Tools.csproj
+++ b/SymLink Tools/SymLink Tools.csproj
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,6 +34,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -58,6 +60,7 @@
     </ApplicationDefinition>
     <Compile Include="SymLinkBuilder.cs" />
     <Compile Include="Tools\StorageHelper.cs" />
+    <Compile Include="Tools\StringTools.cs" />
     <Compile Include="Windows\DirectoryListing.xaml.cs">
       <DependentUpon>DirectoryListing.xaml</DependentUpon>
     </Compile>
